<resources>
    <string name="app_name">Testing Subject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SEV2">Comic Fiesta is one of Southeast Asia’s largest and longest-running animation, comics and games (ACG) event. We gather tens of thousands of comic artists, illustrators, cosplayers and fans of the culture every year!
</string>
    <string name="time">10AM - 10PM</string>
    <string name="location">Kuala Lumpur Convention Centre</string>
    <string name="date">17 - 18 December 2022</string>
    <string name="website">https://www.comicfiesta.org/</string>
    <string name="set">Set it on calendar so you won’t forget about the event!!!</string>
    <string name="map_key" translatable="false">AIzaSyCMMgGGF95pOeGx_zPGCvFRNj6EzwVMPrw</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>